--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -42,16 +42,17 @@ b { font-weight: 500; }
 #searchbar { margin-top: -1px; background: #0098cd; }
 #searchbar .twitter { text-align: right; margin-top: 15px; }
 #searchbar .search { margin-top: -10px; }
-#searchbar .search form { margin-bottom: 10px; }
-#searchbar .search form fieldset { width: 85%; display: inline-block; }
+#searchbar .search form { margin-bottom: 10px; width: 100%; }
+#searchbar .search form fieldset { display: inline; width: 75%; padding: 0; margin: 0; }
+#searchbar .search form fieldset #Search { display: inline-block; margin-right: 0px; width: 100%; }
+#searchbar .search form fieldset #Search input { width: 90%; height: 35px; border: none; padding-left: 40px; margin: 0; }
+#searchbar .search form fieldset #Search ::-webkit-input-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search form fieldset #Search :-moz-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search form fieldset #Search ::-moz-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search form fieldset #Search :-ms-input-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search form .Actions { display: inline-block; width: 20%; padding: 0; margin: 0; }
+#searchbar .search form .Actions #Form_SearchForm_action_results { -webkit-font-smoothing: antialiased; display: inline-block; width: 90px; height: 43px; padding: 5px 10px; font-size: 13px; text-transform: uppercase; border: 1px solid #0077a8; }
 #searchbar .search .mglass { position: relative; margin-bottom: -62px; margin-left: 5px; margin-top: 0px; }
-#searchbar .search #Search { display: inline-block; width: 80%; margin-right: 0px; }
-#searchbar .search #Search input { width: 90%; height: 35px; border: none; padding-left: 40px; }
-#searchbar .search #Search ::-webkit-input-placeholder { font-size: 14px; color: #535353; }
-#searchbar .search #Search :-moz-placeholder { font-size: 14px; color: #535353; }
-#searchbar .search #Search ::-moz-placeholder { font-size: 14px; color: #535353; }
-#searchbar .search #Search :-ms-input-placeholder { font-size: 14px; color: #535353; }
-#searchbar .search #CustomSearchForm_CustomSearchForm_action_customResults { -webkit-font-smoothing: antialiased; display: inline-block; width: 90px; height: 43px; padding: 5px 10px; font-size: 13px; text-transform: uppercase; border: 1px solid #0077a8; }
 
 /*Footer -------------------------------------------------- */
 #footer { width: 100%; background: #323232; position: relative; }
@@ -227,9 +228,11 @@ b { font-weight: 500; }
   @-moz-document url-prefix() { #searchbar .search .mglass { margin-left: -140px !important; }
     #SessionsHolder #searchbar .search .mglass { margin-left: -150px !important; } }
   #searchbar { margin-left: -20px; margin-right: -20px; }
-  #searchbar .search form fieldset { width: 100%; }
+  #searchbar .search form { padding-left: 20px; }
+  #searchbar .search form fieldset { width: 70%; }
+  #searchbar .search form .Actions { width: 90px; margin-left: 10px; }
   #searchbar .search .mglass { margin-left: 25px; }
-  #searchbar .search #Search { padding-left: 20px; width: 60%; }
+  #searchbar .search #Search { width: 60%; }
   #searchbar .search #Search input { width: 60%; }
   #searchbar .search #Search ::-webkit-input-placeholder { font-size: 14px; color: white; }
   #searchbar .search #Search :-moz-placeholder { font-size: 14px; color: white; }
@@ -266,9 +269,7 @@ b { font-weight: 500; }
   #SessionsHolder #filter-wrap #Topic ul li input { display: block; }
   #navigation .navbar-inner .container .btn-navbar { margin-top: 10px; }
   #navigation .navbar-inner .container .social-icons { display: none !important; }
-  #searchbar .search fieldset { width: 100% !important; }
-  #searchbar .search fieldset #Search { display: inline-block; width: 80%; margin-right: 0px; }
-  #searchbar .search fieldset #Search input { width: 85%; }
+  #searchbar .search form fieldset #Search input { width: 85%; }
   #SessionController .social-icons .span3 { width: 45%; margin-left: 2.5%; margin-right: 2.5%; padding-bottom: 10px; }
   #SessionController .social-icons .span3 .view-count { width: 65px; }
   #MeetingsHolder .thumbnail { -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; text-decoration: none; min-height: 280px; }
