--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -44,6 +44,7 @@ b { font-weight: 500; }
 #searchbar .search { margin-top: -10px; }
 #searchbar .search form { margin-bottom: 10px; width: 100%; }
 #searchbar .search form fieldset { display: inline; width: 75%; padding: 0; margin: 0; }
+#searchbar .search form fieldset label { display: none; }
 #searchbar .search form fieldset #Search { display: inline-block; margin-right: 0px; width: 100%; }
 #searchbar .search form fieldset #Search input { width: 90%; height: 35px; border: none; padding-left: 40px; margin: 0; }
 #searchbar .search form fieldset #Search ::-webkit-input-placeholder { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; color: #535353; }
