--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -152,6 +152,7 @@ b{
 		margin-top: -10px;
 
 		form{
+
 			margin-bottom: 10px;
 			width: 100%;
 
@@ -160,6 +161,10 @@ b{
 				width: 75%;
 				padding: 0;
 				margin: 0;
+
+				label{
+					display:none;
+				}
 
 				#Search{
 
